Create Form , SendEmail , emailHistory

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.883.0",
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
+    "jspdf": "^2.3.1",
     "moment": "^2.29.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
